# AssesmentAgent

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONVENTIONS.md  Dockerfile  README.md  ROADMAP.md  STATUS.md  pyproject.toml
.claude/: settings.json
.claude/skills/add-question/: SKILL.md
.claude/skills/ship/: SKILL.md
.github/workflows/: checkpoints.yml  evals.yml
assessment_agent/: __init__.py  adversarial.py  adversarial_eval.py  adversarial_eval_cases.py  agent.py  api.py  authoring.py  cli.py  constants.py  draft_eval.py  draft_eval_cases.py  eval.py  eval_cases.py  judge.py  languages.py  llm.py  loader.py  mailer.py  pricing.py  questions.py  ratelimit.py  report.py  rubric.py  runner.py  sandbox.py  signing.py
assessment_agent/prompts/: adversarial_gen.md  question_draft.md  report_guidance.md  review_procedure.md  scoring_scale.md
assessment_agent/prompts/examples/: 01_strong.md  02_correct_but_terse.md  03_buggy.md
examples/: sum_of_n.json
scripts/: checkpoints.sh
submissions/: good_solution.js  good_solution.py  knapsack_good.py  knapsack_slow.py  slow_solution.py  wrong_solution.py
tests/: conftest.py  test_adversarial.py  test_adversarial_eval.py  test_agent.py  test_api.py  test_authoring.py  test_contract.py  test_draft_eval.py  test_judge.py  test_languages.py  test_llm.py  test_loader.py  test_mailer.py  test_pricing.py  test_questions.py  test_report.py  test_report_endpoint.py  test_run_endpoints.py  test_runner.py  test_sandbox.py  test_sandbox_nsjail.py  test_scoring.py  test_signing.py
