[project]
name = "assessment-agent"
version = "0.1.0"
description = "Assessment Agent - runs a candidate's code against a coding question, verifies output, judges code quality, and issues a pass/fail verdict."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2",
]

[project.scripts]
assess = "assessment_agent.cli:main"
assess-eval = "assessment_agent.eval:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["assessment_agent"]
