[project]
name = "assessment-agent"
version = "0.1.0"
description = "Assessment Agent - runs a candidate's code against a coding question, verifies output, judges code quality, and issues a pass/fail verdict."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "pydantic>=2",
    "reportlab>=4",
    "uvicorn[standard]>=0.51.0",
]

[project.scripts]
assess = "assessment_agent.cli:main"
assess-eval = "assessment_agent.eval:main"
assess-draft-eval = "assessment_agent.draft_eval:main"
assess-adversarial-eval = "assessment_agent.adversarial_eval:main"
assess-api = "assessment_agent.api:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["assessment_agent"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# pyflakes(F), pycodestyle(E), isort(I), pep8-naming(N), bugbear(B), pyupgrade(UP).
select = ["E", "F", "I", "N", "B", "UP"]
ignore = ["E501"]  # line length is the formatter's job, not a lint error

[tool.mypy]
python_version = "3.10"
files = ["assessment_agent"]
ignore_missing_imports = true   # anthropic has no stubs
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
